Twenty Fourteen: fix gallery layout issue in IE, props jartes and iamtakashi. Fixes #25625. Built from https://develop.svn.wordpress.org/trunk@26057
git-svn-id: http://core.svn.wordpress.org/trunk@25981 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -1381,14 +1381,6 @@ a.post-thumbnail:hover {
 	position: relative;
 }
 
-.gallery-columns-1.gallery-size-medium,
-.gallery-columns-1.gallery-size-thumbnail,
-.gallery-columns-2.gallery-size-thumbnail,
-.gallery-columns-3.gallery-size-thumbnail {
-	display: table;
-	margin: 0 auto 20px;
-}
-
 .gallery-columns-1 .gallery-item {
 	max-width: 100%;
 }
